build: Restore Windows executable icon
Previously handled by the legacy Visual Studio and SCons scripts,
this contains the definition for the application icon. This integrates
the Windows resource file (`pingus.rc`) into the CMake build configuration.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -277,6 +277,11 @@ if(APPLE)
     list(APPEND PINGUS_SOURCES "${CMAKE_SOURCE_DIR}/src/macosx/SDLMain.m")
 endif()
 
+# Windows-specific sources (Icon)
+if(WIN32)
+    list(APPEND PINGUS_SOURCES "${CMAKE_SOURCE_DIR}/src/win32/pingus.rc")
+endif()
+
 # Create static library
 add_library(libpingus STATIC
     ${PINGUS_SOURCES}
